[package]
name = "autarkie"
version = "0.7.0"
edition = "2021"
description = "autarkie - instant grammar fuzzing using rust"
license = 'Apache-2.0'

[dependencies]
# different encodings
bincode = { version = "1.3.3"}
serde = { version = "1.0.0", features = ["derive"] }

autarkie_derive = { git = "https://github.com/0xalpharush/autarkie", branch = "master", optional = true}

libafl = {workspace = true}
libafl_bolts = {workspace = true}
libafl_targets = {workspace = true, default-features = false}
colored = "3.0.0"
petgraph = "0.7.1"
clap = { version = "4.5.20", features = ["derive"] }

regex = "1.11.1"
num-traits = "0.2.19"
serde_json = "1.0.140"
twox-hash = "2.1.1"
blake3 = "1.8.2"
parity-scale-codec = { version = "3.7.5", optional = true, features = ["serde", "derive"]}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempdir = "0.3.7"

[[bench]]
name = "mutators"
harness = false

[features]
derive = ["autarkie_derive"]
introspection = ["libafl/introspection"]
libfuzzer = ["libafl_targets/pointer_maps", "libafl_targets/sancov_8bit", "libafl_targets/cmplog"]
afl = []
llvm-fuzzer-no-link = [
	"libafl_targets/std",
	"libafl_targets/sancov_8bit",
	"libafl_targets/observers",
	"libafl_targets/libfuzzer",
	"libafl_targets/cmplog",
	"libafl_targets/sancov_cmplog",
	"libafl_targets/sancov_pcguard_hitcounts",
]
debug_mutators = []
fuzzbench = []
scale = ["dep:parity-scale-codec"]
